@@ -1,2 +1,0 @@
-[ssl]
-version = invalid_ssl
