@@ -1,4 +1,5 @@
 4.1
+ * remove support for deprecated version specific TLS in Python 3.6 (CASSANDRA-17365)
  * resolve several pylint issues in cqlsh.py and pylib (CASSANDRA-17480)
  * Streaming sessions longer than 3 minutes fail with timeout (CASSANDRA-17510)
  * Add ability to track state in repair (CASSANDRA-15399)
